2007-02-27 [colin]	2.8.0cvs5

	* src/gtk/gtkutils.c
		Use gtk_window_set_role instead of 
		_set_wmclass

2007-02-27 [colin]	2.8.0cvs4

	* src/inc.c
		Fix "After receiving new mail, go to inbox" on IMAP,
		and make it work only on manual reception

2007-02-27 [wwp]	2.8.0cvs3

	* src/prefs_filtering.c
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
		Update filtering matcher's and action's color label menus
		when re-opening those dialogs (reflect any change to the
		color labels list in the preferences).

2007-02-27 [colin]	2.8.0cvs2

	* src/imap.c
	* src/etpan/etpan-thread-manager-types.h
	* src/etpan/etpan-thread-manager.c
	* src/etpan/imap-thread.c
		Log imap ALERTs as errors in the log.

2007-02-26 [paul]	2.8.0cvs1

	* tools/claws.i18n.status.pl
		updated

2007-02-26 [paul]	2.7.2cvs75

	* po/ca.po
	* po/cs.po
	* po/de.po
	* po/en_GB.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po
		updated by Miquel Oliete, Tim Brain, Stephan Sachse,
		me, Flammie Pirinen, Fabien Vantard, Pader Rezso,
		Pawel Pekala, Frederico Goncalves Guimaraes, Andrej Kacian,
		Aleksandar Urosevic, and Ralgh Young

2007-02-25 [mones]	2.7.2cvs74

	* po/es.po
		Updated for release

2007-02-25 [colin]	2.7.2cvs73

	* src/main.c
		Clearing the list is only useful
		to prevent a valgrind false-positive

2007-02-25 [paul]	2.7.2cvs72

	* tools/Makefile.am
	* tools/README
	* tools/kmail-mailbox2claws-mail.pl  **ADDED**
	* tools/maildir2claws-mail.pl  **REMOVED**
		renamed the script, fixed a couple bugs

2007-02-23 [colin]	2.7.2cvs71

	* src/addressbook.c
		Fix a leak, check for a few improbable nulls

2007-02-23 [colin]	2.7.2cvs70

	* src/main.c
	* src/main.h
	* src/plugins/trayicon/trayicon.c
		Fix blinking mainwin when starting in tray
		(show mainwindow later in the startup process,
		 apart if restarting post-crash)

2007-02-23 [colin]	2.7.2cvs69

	* src/folderview.c
	* src/imap_gtk.c
		Fix crash when unsubscribing the currently