@@ -2398,3 +2398,4 @@
 ( cvs diff -u -r 1.59.2.53 -r 1.59.2.54 src/prefs_filtering.c;  cvs diff -u -r 1.1.4.33 -r 1.1.4.34 src/prefs_filtering_action.c;  cvs diff -u -r 1.43.2.55 -r 1.43.2.56 src/prefs_matcher.c;  ) > 2.8.0cvs3.patchset
 ( cvs diff -u -r 1.149.2.65 -r 1.149.2.66 src/inc.c;  ) > 2.8.0cvs4.patchset
 ( cvs diff -u -r 1.5.2.53 -r 1.5.2.54 src/gtk/gtkutils.c;  ) > 2.8.0cvs5.patchset
+( cvs diff -u -r 1.274.2.173 -r 1.274.2.174 src/mainwindow.c;  cvs diff -u -r 1.36.2.98 -r 1.36.2.99 src/common/utils.c;  cvs diff -u -r 1.20.2.44 -r 1.20.2.45 src/common/utils.h;  ) > 2.8.0cvs6.patchset
