@@ -1,3 +1,10 @@
+2007-02-27 [colin]	2.8.0cvs6
+
+	* src/mainwindow.c
+	* src/common/utils.c
+	* src/common/utils.h
+		Fix '+' in mailto URIs for List-* headers
+
 2007-02-27 [colin]	2.8.0cvs5
 
 	* src/gtk/gtkutils.c
